feat: add photos icons and header

--- a/pages/main/index.h.html
+++ b/pages/main/index.h.html
@@ -8,6 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-
+    <main>
+        <div class="section-one">
+            <header>
+                <div class="logo">
+                    <h1>Cozy House</h1>
+                    <p>Shelter for pets in Boston</p>
+                </div>
+                <div class="navigation">
+                    <nav>
+                        <ul>
+                            <li><a href="#">About the shellter</a></li>
+                            <li><a href="#">Our pets</a></li>
+                            <li><a href="#">Help the shelter</a></li>
+                            <li><a href="#">Contaacts</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+            <div class="section-one-puppy">asdsa</div>
+        </div>
+    </main>
 </body>
 </html>
