--- a/pages/main/index.h.html
+++ b/pages/main/index.h.html
@@ -26,7 +26,18 @@
                     </nav>
                 </div>
             </header>
-            <div class="section-one-puppy">asdsa</div>
+            <div class="section-one-puppy">
+                <div class="section-one-puppt-one">
+                    <div class="puppy-h2">
+                       <h2>Not only people need a house</h2>
+                    </div>
+                    <div class="puppy-p">
+                        <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
+                    </div>
+                    <div class="puppy-btn"><button>Make a friend</button></div>
+                </div>
+                <div class="section-one-puppt-two"></div>
+            </div>
         </div>
     </main>
 </body>
