feat: add first section finished

--- a/pages/main/index.h.html
+++ b/pages/main/index.h.html
@@ -36,7 +36,9 @@
                     </div>
                     <div class="puppy-btn"><button>Make a friend</button></div>
                 </div>
-                <div class="section-one-puppt-two"></div>
+                <div class="section-one-puppt-two">
+                    <img src="../../assets/images/start-screen-puppy.png" alt="puppy">
+                </div>
             </div>
         </div>
     </main>
