--- a/pages/main/index.h.html
+++ b/pages/main/index.h.html
@@ -41,6 +41,17 @@
                 </div>
             </div>
         </div>
+        <div class="section-two">
+            <div class="section-two-img">
+                <img src="../../assets/images/about-pets.png" alt="about pets">
+            </div>
+            <div class="section-two-text">
+                <div class="two-text-h2"><h2>About the shelter “Cozy House”</h2></div>
+                <div class="two-text-p-one here" ><p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p></div>
+                <div class="two-text-p-two here"><p>We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p></div>
+
+            </div>
+        </div>
     </main>
 </body>
 </html>
