feat: add main page

--- a/pages/main/index.h.html
+++ b/pages/main/index.h.html
@@ -49,9 +49,200 @@
                 <div class="two-text-h2"><h2>About the shelter “Cozy House”</h2></div>
                 <div class="two-text-p-one here" ><p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p></div>
                 <div class="two-text-p-two here"><p>We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p></div>
-
             </div>
         </div>
+        <div class="section-three">
+            <div id="prev-Btn">
+                <button><img src="../../assets/icons/Arrow left.svg" alt="left"></button>
+            </div>
+            <div id="next-Btn">
+                <button><img src="../../assets/icons/Arrow right.svg" alt="right"></button>
+                
+            </div>
+
+            <div class="section-three-box">
+                <div class="section-three-box-title">
+                    <h3>Our friends who are looking for a house</h3>
+                </div>
+                <div class="slider-containter">
+                    <div class="contener-slide" >
+                        <div class="card-slider slider-one" id="lastClone">
+                            <div class="card">
+                                <div class="card-dimg"><img src="../../assets/images/pets-katrine.png" alt="Katarine"></div>
+                                <div class="card-title"><h2>Katarine</h2></div>
+                                <div class="card-button"><button>Learn more</button></div>
+                            </div>
+                            <div class="card">
+                                <div class="card-dimg"><img src="../../assets/images/pets-jennifer.png" alt="Jennifer"></div>
+                                <div class="card-title"><h2>Jennifer</h2></div>
+                                <div class="card-button"><button>Learn more</button></div>
+                            </div>
+                            <div class="card">
+                                <div class="card-dimg"><img src="../../assets/images/pets-woody.png" alt="Woody"></div>
+                                <div class="card-title"><h2>Woody</h2></div>
+                                <div class="card-button"><button>Learn more</button></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>        
+                <div class="section-three-button">
+                    <button>Get to know the rest</button>
+                </div>     
+            </div>
+        </div>
+        <div class="section-four">
+            <div class="section-four-box">
+               <div class="four-box-title">
+                   <h2>How you can help our shelter</h2>
+               </div>
+               <div class="four-box-flex">
+                <div class="one-box">
+                    <div class="flex-item-one">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-pet-food.svg" alt="petfood">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>Pet food</h4>
+                        </div>
+                    </div>
+                    <div class="flex-item-two">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-transportation.svg" alt="transportation">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>Transportation</h4>
+                        </div>
+                    </div>
+                    <div class="flex-item-three">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-toys.svg" alt="toys">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>Toys</h4>
+                        </div>
+                    </div>
+                    <div class="flex-item-four">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>bowls and cups</h4>
+                        </div>
+                    </div>
+                    <div class="flex-item-five">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-shampoos.svg" alt="shampoos">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>Shampoos</h4>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="box-two">
+                    <div class="flex-item-six">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-vitamins.svg" alt="vitamins">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>Vitamins</h4>
+                        </div>
+                    </div>
+                    <div class="flex-item-seven">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-medicines.svg" alt="medicines">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>Medicines</h4>
+                        </div>
+                    </div>
+                    <div class="flex-item-eight">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-collars-leashes.svg" alt="collars-leashes">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>collars / leashes</h4>
+                        </div>
+                    </div>
+                    <div class="flex-item-nine">
+                        <div class="item-one-image">
+                            <img src="../../assets/icons/icon-sleeping-area.svg" alt="sleeping-area">
+                        </div>
+                        <div class="item-one-title">
+                            <h4>sleeping area</h4>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            </div>
+        </div>
+        <div class="section-five">
+            <div class="five-box">
+                <div class="five-box-img">
+                    <img src="../../assets/images/donation-dog.png" alt="donation-dog">
+                </div>
+                <div class="five-box-textarea">
+                    <div class="texarea-header">
+                        <h3>You can also make a donation</h3>
+                    </div>
+                    <div class="textarea-bank">
+                            <h5>Name of the bank / Type of bank account</h5>
+                    </div>
+                    <div class="textarea-bank-card">
+                        <img src="../../assets/icons/credit-card.svg" alt="card">
+                        <h4>8380 2880 8028 8791 7435</h4>
+                    </div>
+                    <div class="textarea-paragraf">
+                        <p>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <footer>
+        <div class="footer-box">
+            <div class="footer-box-one">
+                <div class="footer-box-one-title">
+                    <h3>For questions and suggestions</h3>
+                </div>
+                <div class="footer-box-mail">
+                    <div>
+                        <img src="../../assets/icons/icon-email.svg" alt="email">
+                     </div>
+                    <a href="mailto:email@shelter.com">email@shelter.com</a>
+                </div>
+                <div class="footer-box-phone">
+                    <div>
+                       <img src="../../assets/icons/icon-phone.svg" alt="phone">
+                     </div>
+                    <a href="">+13 674 567 75 54</a>
+                </div>
+            </div>
+            <div class="footer-box-two">
+                <div class="box-two-title">
+                    <h3>We are waiting for your visit</h3>
+                </div>
+                <div class="box-two-location-one">
+                    <div>
+                        <img src="../../assets/icons/icon-marker.svg" alt="marker">
+                    </div>
+                    <h4>1 Central Street, Boston (entrance from the store)</h4>
+                </div>
+                <div class="box-two-location-two">
+                    <div>
+                        <img src="../../assets/icons/icon-marker.svg" alt="marker">
+                    </div>
+                    <h4>18 South Park, London </h4>
+                </div>
+
+            </div>
+            <div class="footer-box-three">
+                <img src="../../assets/images/footer-puppy.png" alt="puppy">
+            </div>
+        </div>
+    </footer>
     </main>
+    <script src="./scritp.js"></script>
 </body>
 </html>
