feat: add slider

--- a/pages/main/index.h.html
+++ b/pages/main/index.h.html
@@ -34,7 +34,7 @@
                     <div class="puppy-p">
                         <p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
                     </div>
-                    <div class="puppy-btn"><button>Make a friend</button></div>
+                    <div class="puppy-btn"><button onclick="btnOurFriends()">Make a friend</button></div>
                 </div>
                 <div class="section-one-puppt-two">
                     <img src="../../assets/images/start-screen-puppy.png" alt="puppy">
@@ -51,7 +51,7 @@
                 <div class="two-text-p-two here"><p>We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p></div>
             </div>
         </div>
-        <div class="section-three">
+        <div class="section-three" id="ourFriends">
             <div id="prev-Btn">
                 <button><img src="../../assets/icons/Arrow left.svg" alt="left"></button>
             </div>
@@ -66,24 +66,53 @@
                 </div>
                 <div class="slider-containter">
                     <div class="contener-slide" >
-                        <div class="card-slider slider-one" id="lastClone">
+                        <div class="card-wrap">
                             <div class="card">
-                                <div class="card-dimg"><img src="../../assets/images/pets-katrine.png" alt="Katarine"></div>
-                                <div class="card-title"><h2>Katarine</h2></div>
-                                <div class="card-button"><button>Learn more</button></div>
+                              <img src="../../assets/images/pets-katrine.png" alt="Katrine" />
+                              <p>Katrine</p>
+                              <div class="learnMoreBox">
+                                <button class="learnMoreBtn">Learn more</button>
+                              </div>
                             </div>
                             <div class="card">
-                                <div class="card-dimg"><img src="../../assets/images/pets-jennifer.png" alt="Jennifer"></div>
-                                <div class="card-title"><h2>Jennifer</h2></div>
-                                <div class="card-button"><button>Learn more</button></div>
+                              <img
+                                src="../../assets/images/pets-jennifer.png"
+                                alt="Jennifer"
+                              />
+                              <p>Jennifer</p>
+                              <div class="learnMoreBox">
+                                <button class="learnMoreBtn">Learn more</button>
+                              </div>
                             </div>
                             <div class="card">
-                                <div class="card-dimg"><img src="../../assets/images/pets-woody.png" alt="Woody"></div>
-                                <div class="card-title"><h2>Woody</h2></div>
-                                <div class="card-button"><button>Learn more</button></div>
+                              <img src="../../assets/images/pets-woody.png" alt="Woody" />
+                              <p>Woody</p>
+                              <div class="learnMoreBox">
+                                <button class="learnMoreBtn">Learn more</button>
+                              </div>
                             </div>
-                        </div>
-
+                            <div class="card">
+                                <img src="../../assets/images/pets-charly.png" alt="Charly" />
+                                <p>Charly</p>
+                                <div class="learnMoreBox">
+                                  <button class="learnMoreBtn">Learn more</button>
+                                </div>
+                              </div>
+                              <div class="card">
+                                <img src="../../assets/images/pets-sophia.png" alt="sophia" />
+                                <p>Sophia</p>
+                                <div class="learnMoreBox">
+                                  <button class="learnMoreBtn">Learn more</button>
+                                </div>
+                              </div>
+                              <div class="card">
+                                <img src="../../assets/images/pets-freddie.png" alt="Freddie" />
+                                <p>Freddie</p>
+                                <div class="learnMoreBox">
+                                  <button class="learnMoreBtn">Learn more</button>
+                                </div>
+                              </div>
+                          </div>
                     </div>
                 </div>        
                 <div class="section-three-button">
