feat: add about the shellter and our pets links to navigation

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -17,8 +17,8 @@
         <div class="navigation">
             <nav>
                 <ul>
-                    <li><a href="#">About the shellter</a></li>
-                    <li><a href="#">Our pets</a></li>
+                    <li><a href="../main/index.h.html">About the shellter</a></li>
+                    <li><a href="../pets/index.html">Our pets</a></li>
                     <li><a href="#">Help the shelter</a></li>
                     <li><a href="#">Contaacts</a></li>
                 </ul>
