feat: changed inviled svg name

--- a/pages/main/index.h.html
+++ b/pages/main/index.h.html
@@ -53,10 +53,10 @@
         </div>
         <div class="section-three" id="ourFriends">
             <div id="prev-Btn">
-                <button><img src="../../assets/icons/Arrow left.svg" alt="left"></button>
+                <button><img src="../../assets/icons/Arrow-left.svg" alt="left"></button>
             </div>
             <div id="next-Btn">
-                <button><img src="../../assets/icons/Arrow right.svg" alt="right"></button>
+                <button><img src="../../assets/icons/Arrow-right.svg" alt="right"></button>
                 
             </div>
 
