feat: add added few links

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -256,7 +256,7 @@
                     <div>
                        <img src="../../assets/icons/icon-phone.svg" alt="phone">
                      </div>
-                    <a href="">+13 674 567 75 54</a>
+                    <a href="tel:+136745677554">+13 674 567 75 54</a>
                 </div>
             </div>
             <div class="footer-box-two">
@@ -267,13 +267,17 @@
                     <div>
                         <img src="../../assets/icons/icon-marker.svg" alt="marker">
                     </div>
-                    <h4>1 Central Street, Boston (entrance from the store)</h4>
+                    <a href="https://goo.gl/maps/xqRSKcTbymvShxof7">
+                         <h4>1 Central Street, Boston (entrance from the store)</h4>
+                    </a>
                 </div>
                 <div class="box-two-location-two">
                     <div>
                         <img src="../../assets/icons/icon-marker.svg" alt="marker">
                     </div>
-                    <h4>18 South Park, London </h4>
+                    <a href="https://goo.gl/maps/i6EnnC2U26eGFeHZ9" target="_blank">
+                       <h4>18 South Park, London </h4>
+                    </a>
                 </div>
 
             </div>
