feat: add link to271 line

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -267,7 +267,7 @@
                     <div>
                         <img src="../../assets/icons/icon-marker.svg" alt="marker">
                     </div>
-                    <a href="https://goo.gl/maps/xqRSKcTbymvShxof7">
+                    <a href="https://goo.gl/maps/YngXgq2mWNd2mPq39" target="_blank">
                          <h4>1 Central Street, Boston (entrance from the store)</h4>
                     </a>
                 </div>
