feat: changed 122 line a tag

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>        
                 <div class="section-three-button">
-                    <button><a href="../pets/index.html"> Get to know the rest</a></button>
+                    <a href="../pets/index.html">  <button> Get to know the rest</button></a>
                 </div>     
             </div>
         </div>
