feat: changed main content

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>our pats</title>
 </head>
 <body>
-    <div class="all">
     <header>
         <div class="logo">
             <h1>Cozy House</h1>
@@ -17,73 +16,69 @@
         <div class="navigation">
             <nav>
                 <ul>
-                    <li><a href="../main/index.h.html">About the shellter</a></li>
-                    <li><a href="../pets/index.html">Our pets</a></li>
-                    <li><a href="#">Help the shelter</a></li>
-                    <li><a href="#">Contaacts</a></li>
+                    <li><a href="../main/index.h.html" >About the shellter</a></li>
+                    <li><a href="../pets/index.html" >Our pets</a></li>
+                    <li><a href="#help">Help the shelter</a></li>
+                    <li><a href="#foot">Contaacts</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <div class="main-box">
-            <div class="main-box-title">
-                <h3>Our friends who are looking for a house</h3>
+        <div class="container">
+            <div class="container-title">
+                <h3>Our friends who <br> are looking for a house</h3>
             </div>
-            <div class="main-box-wrap">
-                <div class="main-box-containter">
-                    <div class="container-img"><img src="../../assets/images/pets-katrine.png" alt="katrine"></div>
-                    <div class="container-title"><h2>Katrine</h2></div>
-                    <div class="container-btn"><button>Learn more</button></div>
+            <div class="container-grid">
+                <div class="grid-card">
+                    <div class="grid-card-img"><img src="../../assets/images/pets-katrine.png" alt="katrine"></div>
+                    <div class="grid-card-title"><p>Katrine</p></div>
+                    <div class="grid-card-btn"><button>Learn more</button></div>
                 </div>
-                <div class="main-box-containter">
-                    <div class="container-img"><img src="../../assets/images/pets-jennifer.png" alt="jennifer"></div>
-                    <div class="container-title"><h2>Jennifer</h2></div>
-                    <div class="container-btn"><button>Learn more</button></div>
+                <div class="grid-card">
+                    <div class="grid-card-img"><img src="../../assets/images/pets-jennifer.png" alt="jennifer"></div>
+                    <div class="grid-card-title"><p>Jennifer</p></div>
+                    <div class="grid-card-btn"><button>Learn more</button></div>
                 </div>
-                <div class="main-box-containter">
-                    <div class="container-img"><img src="../../assets/images/pets-woody.png" alt="woody"></div>
-                    <div class="container-title"><h2>Woody</h2></div>
-                    <div class="container-btn"><button>Learn more</button></div>
+                <div class="grid-card">
+                    <div class="grid-card-img"><img src="../../assets/images/pets-woody.png" alt="woody"></div>
+                    <div class="grid-card-title"><p>Woody</p></div>
+                    <div class="grid-card-btn"><button>Learn more</button></div>
                 </div>
-                <div class="main-box-containter">
-                    <div class="container-img"><img src="../../assets/images/pets-sophia.png" alt="sophia"></div>
-                    <div class="container-title"><h2>sophia</h2></div>
-                    <div class="container-btn"><button>Learn more</button></div>
+                <div class="grid-card">
+                    <div class="grid-card-img"><img src="../../assets/images/pets-sophia.png" alt="sophia"></div>
+                    <div class="grid-card-title"><p>Sophia</p></div>
+                    <div class="grid-card-btn"><button>Learn more</button></div>
+                </div>                <div class="grid-card">
+                    <div class="grid-card-img"><img src="../../assets/images/pets-timmy.png" alt="Timmy"></div>
+                    <div class="grid-card-title"><p>Timmy</p></div>
+                    <div class="grid-card-btn"><button>Learn more</button></div>
                 </div>
-                <div class="main-box-containter">
-                    <div class="container-img"><img src="../../assets/images/pets-timmy.png" alt="timmy"></div>
-                    <div class="container-title"><h2>Timyy</h2></div>
-                    <div class="container-btn"><button>Learn more</button></div>
+                <div class="grid-card">
+                    <div class="grid-card-img"><img src="../../assets/images/pets-charly.png" alt="Carly"></div>
+                    <div class="grid-card-title"><p>Carly</p></div>
+                    <div class="grid-card-btn"><button>Learn more</button></div>
+                </div>                <div class="grid-card">
+                    <div class="grid-card-img"><img src="../../assets/images/pets-scarlett.png" alt="Scarlett"></div>
+                    <div class="grid-card-title"><p>Scarlett</p></div>
+                    <div class="grid-card-btn"><button>Learn more</button></div>
+                </div>                <div class="grid-card">
+                    <div class="grid-card-img"><img src="../../assets/images/pets-freddie.png" alt="Freddie"></div>
+                    <div class="grid-card-title"><p>Freddie</p></div>
+                    <div class="grid-card-btn"><button>Learn more</button></div>
                 </div>
-                <div class="main-box-containter">
-                    <div class="container-img"><img src="../../assets/images/pets-charly.png" alt="charly"></div>
-                    <div class="container-title"><h2>Charly</h2></div>
-                    <div class="container-btn"><button>Learn more</button></div>
-                </div>
-                <div class="main-box-containter">
-                    <div class="container-img"><img src="../../assets/images/pets-scarlett.png" alt="scarlett"></div>
-                    <div class="container-title"><h2>Scarlett</h2></div>
-                    <div class="container-btn"><button>Learn more</button></div>
-                </div>
-                <div class="main-box-containter">
-                    <div class="container-img"><img src="../../assets/images/pets-freddie.png" alt="freddie"></div>
-                    <div class="container-title"><h2>Freddie</h2></div>
-                    <div class="container-btn"><button>Learn more</button></div>
-                </div>
-
             </div>
             <div class="arrows">
-                <button class="border-left"><<</button>
-                <button class="border-left"><</button>
-                <button class="border-one">1</button>
-                <button class="border-right">></button>
-                <button class="border-right">>></button>
-            </div>
+                <div class="arrows-black"><span><<</span></div>
+                <div class="arrows-black"><span><</span></div>
+                <div class="arrows-one">1</div>
+                <div class="arrows-pimk-ish"><span>></span></div>
+                <div class="arrows-pimk-ish"><span>>></span></div>
 
+            </div>
         </div>
     </main>
-    <footer>
+    <footer id="foot">
         <div class="footer-box">
             <div class="footer-box-one">
                 <div class="footer-box-one-title">
@@ -99,7 +94,7 @@
                     <div>
                        <img src="../../assets/icons/icon-phone.svg" alt="phone">
                      </div>
-                    <a href="">+13 674 567 75 54</a>
+                    <a href="tel:+136745677554">+13 674 567 75 54</a>
                 </div>
             </div>
             <div class="footer-box-two">
@@ -110,13 +105,17 @@
                     <div>
                         <img src="../../assets/icons/icon-marker.svg" alt="marker">
                     </div>
-                    <h4>1 Central Street, Boston (entrance from the store)</h4>
+                    <a href="https://goo.gl/maps/YngXgq2mWNd2mPq39" target="_blank">
+                         <h4>1 Central Street, Boston (entrance from the store)</h4>
+                    </a>
                 </div>
                 <div class="box-two-location-two">
                     <div>
                         <img src="../../assets/icons/icon-marker.svg" alt="marker">
                     </div>
-                    <h4>18 South Park, London </h4>
+                    <a href="https://goo.gl/maps/i6EnnC2U26eGFeHZ9" target="_blank">
+                       <h4>18 South Park, London </h4>
+                    </a>
                 </div>
 
             </div>
@@ -124,7 +123,8 @@
                 <img src="../../assets/images/footer-puppy.png" alt="puppy">
             </div>
         </div>
-       </footer>
-    </div>
+    </footer>
+
+<script src="./script.js"></script>
 </body>
 </html>
