feat:add link to header logo and hover on cards

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -12,10 +12,12 @@
         
         <div class="section-one">
             <header>
+                <a href="../main/index.html">
                 <div class="logo">
                     <h1>Cozy House</h1>
                     <p>Shelter for pets in Boston</p>
                 </div>
+                </a>
                 <div class="navigation">
                     <nav>
                         <ul>
