--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h1>Cozy House</h1>
-            <p>Shelter for pets in Boston</p>
-        </div>
+        <a href="../../pages/main/index.html">
+            <div class="logo">
+                <h1>Cozy House</h1>
+                <p>Shelter for pets in Boston</p>
+            </div>
+           </a>
         <div class="navigation">
             <nav>
                 <ul>
-                    <li><a href="../main/index.h.html" >About the shellter</a></li>
+                    <li><a href="../main/index.html" >About the shellter</a></li>
                     <li><a href="../pets/index.html" >Our pets</a></li>
                     <li><a href="#help">Help the shelter</a></li>
                     <li><a href="#foot">Contaacts</a></li>
