feat:change out pats header

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -21,7 +21,7 @@
                 <div class="navigation">
                     <nav>
                         <ul>
-                            <li><a href="../main/index.h.html" id="highlight">About the shellter</a></li>
+                            <li><a href="#about" id="highlight">About the shellter</a></li>
                             <li><a href="../pets/index.html">Our pets</a></li>
                             <li><a href="#help">Help the shelter</a></li>
                             <li><a href="#foot">Contaacts</a></li>
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="section-two">
+        <div class="section-two" id="about">
             <div class="section-two-img">
                 <img src="../../assets/images/about-pets.png" alt="about pets">
             </div>
