--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <header>
-        <a href="../../pages/main/index.html">
-            <div class="logo">
-                <h1>Cozy House</h1>
-                <p>Shelter for pets in Boston</p>
+        <div class="heder">
+            <a href="../../pages/main/index.html">
+                <div class="logo">
+                    <h1>Cozy House</h1>
+                    <p>Shelter for pets in Boston</p>
+                </div>
+            </a>
+            <div class="navigation">
+                <nav>
+                    <ul>
+                        <li><a href="../main/index.html#about" >About the shellter</a></li>
+                        <li><a href="../pets/index.html" >Our pets</a></li>
+                        <li><a href="../main/index.html#help">Help the shelter</a></li>
+                        <li><a href="../main/index.html#foot">Contaacts</a></li>
+                    </ul>
+                </nav>
             </div>
-           </a>
-        <div class="navigation">
-            <nav>
-                <ul>
-                    <li><a href="../main/index.html" >About the shellter</a></li>
-                    <li><a href="../pets/index.html" >Our pets</a></li>
-                    <li><a href="#help">Help the shelter</a></li>
-                    <li><a href="#foot">Contaacts</a></li>
-                </ul>
-            </nav>
         </div>
     </header>
     <main>
